force-app/main/default/objects/SF2DW_Export_File_Control__mdt/SF2DW_Export_File_Control__mdt.object-meta.xml
<CustomObject>
    <label>SF2DW Export File Control</label>
    <pluralLabel>SF2DW Export File Control</pluralLabel>
</CustomObject>