force-app/main/default/objects/SF2DW_Export_File_Control__mdt/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <label>File Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>