force-app/main/default/objects/SF2DW_Export_File_Control__mdt/fields/Reporting_Period_Name__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Period_Name__c</fullName>
    <label>Reporting Period Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>