force-app/main/default/objects/SF2DW_Export_File_Control__mdt/fields/Send_to_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Email__c</fullName>
    <label>Send to Email</label>
    <type>TextArea</type>
</CustomField>